# protoc-java-resource-names-plugin

./: .gitignore  .travis.yml  BUILD.bazel  CONTRIBUTING.rst  MANIFEST.in  README.rst  WORKSPACE  gapic_plugin.py  googleapis  repositories.bzl  requirements.txt  setup.py  test-requirements.txt  tox.ini  update_baselines.sh
.circleci/: config.yml
.github/: sync-repo-settings.yaml
plugin/: templates.py
plugin/cli/: dump_gapic_v1.py  gapic_plugin.py  main.py
plugin/compiler/: plugin_pb2.py
plugin/pb2/: resource_pb2.py
plugin/templates/: any_resource_name.mustache  deprecated_parent_resource_name.mustache  insert_builder.mustache  insert_builder_list.mustache  insert_builder_oneof.mustache  insert_class.mustache  insert_class_list.mustache  insert_class_oneof.mustache  insertion_points.py  multi_pattern_resource_name.mustache  oneof_fields.py  parent_resource_name.mustache  resource_name.mustache  resource_name.py  resource_name_factory.mustache  resource_name_fixed.mustache  resource_name_invalid.mustache  resource_name_oneof.mustache  resource_name_type.mustache  untyped_resource_name.mustache
plugin/utils/: casing_utils.py  casingutils.py  gapic_utils.py  gapicutils.py  path_template.py  proto_utils.py  (+1 more)
src/: templates.py
templates/: insert_builder.mustache  insert_builder_list.mustache  insert_class.mustache  resource_name.mustache
test/: dump_gapic_v1.py  test_casing_utils.py  test_config_parsing.py  test_gapic_utils.py  test_gapic_v2_baseline.py  test_path_template.py  test_plugin_baseline.py  test_symbol_table.py
testing/: constraints-3.6.txt
(+50 files in other folders)
