py_binary(
    name = "gapic_plugin",
    srcs = glob(["plugin/**/*.py"]),
    data = glob(["plugin/**/*.mustache"]),
    main = "plugin/cli/gapic_plugin.py",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:protobuf_python",
        "@pypi_chevron//:lib",
        "@pypi_ply//:lib",
        "@pypi_py_yaml//:lib",
    ],
)
